@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.487 2007/03/01 14:06:56 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.488 2007/03/13 09:50:22 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -140,6 +140,14 @@ PH/31 Unlike :fail:, a custom message specified with :defer: was not being
 PH/32 Change the Dovecot authenticator to use read() and write() on the socket
       instead of the C I/O that was originally supplied, because problems were
       reported on Solaris.
+
+PH/33 Compile failed with OpenSSL 0.9.8e. This was due to a coding error in
+      Exim which did not show up earlier: it was assuming that a call to
+      SSL_CTX_set_info_callback() might give an error value. In fact, there is
+      no error. In previous releases of OpenSSL, SSL_CTX_set_info_callback()
+      was a macro that became an assignment, so it seemed to work. This has
+      changed to a proper function call with a void return, hence the compile
+      error. Exim's code has been fixed.
 
 
 Exim version 4.66
